--- a/core-backend/docker-compose.yml
+++ b/core-backend/docker-compose.yml
@@ -2,16 +2,16 @@ version: '3.8'
 
 services:
   database:
-    image: mysql:8.0
+    image: postgres:latest
     environment:
-      MYSQL_DATABASE: rapid_vax
-      MYSQL_USER: user
-      MYSQL_PASSWORD: 5G45S63AMG
-      MYSQL_ROOT_PASSWORD: root_password
+      POSTGRES_DB: rapid_vax
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
     ports:
-      - "3306:3306"
+      - "5432:5432"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - postgres_data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
-  mysql_data:
+  postgres_data:
