--- a/core-backend/composer.json
+++ b/core-backend/composer.json
@@ -72,9 +72,10 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
-        "clear-cache": "symfony console cache:clear",
-        "create-migration": "symfony console make:migration",
-        "migrate-database": "symfony console doctrine:migrations:migrate",
+        "clear-cache": "php bin/console cache:clear",
+        "create-migration": "php bin/console console make:migration",
+        "migrate-database": "php bin/console console doctrine:migrations:migrate",
+        "faker-migrate": "php bin/console doctrine:fixtures:load",
         "fix-cs": "php-cs-fixer fix --config=.php-cs-fixer.dist.php --allow-risky=yes"
     },
     "conflict": {
@@ -87,6 +88,8 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.5",
+        "fakerphp/faker": "^1.23",
         "friendsofphp/php-cs-fixer": "^3.43",
         "symfony/maker-bundle": "^1.52",
         "symfony/monolog-bundle": "^3.10",
