--- a/core-backend/composer.json
+++ b/core-backend/composer.json
@@ -19,6 +19,7 @@
         "phpstan/phpdoc-parser": "^1.24",
         "symfony/asset": "6.4.*",
         "symfony/console": "6.4.*",
+        "symfony/debug-bundle": "^6.4",
         "symfony/dotenv": "6.4.*",
         "symfony/expression-language": "6.4.*",
         "symfony/flex": "^2",
