--- a/core-backend/.env
+++ b/core-backend/.env
@@ -24,8 +24,8 @@ APP_SECRET=81b8622a6def355c748d72ad21cf6f4b
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL=mysql://user:password@database:3306/rapid_vax
-#DATABASE_URL="mysql://root@localhost:3306/rapid_vax?serverVersion=10.4.27&charset=utf8mb4"
+#DATABASE_URL=mysql://user:password@database:3306/rapid_vax
+DATABASE_URL="mysql://root@localhost:3306/rapid_vax?serverVersion=10.4.27&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 
